sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:13: error: not found: value comp
    comp += 1
    ^